<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="date">Date </string>
    <string name="description">Description</string>
    <string name="catalogue_description">CatalogueDescription</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre</string>
    <string name="Director">Director</string>
    <string name="image_empty_data">image empty data</string>
</resources>